[project]
name = "tag-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mujoco>=3.4.0",
    "mujoco-mjx>=3.4.0",
    "pynput>=1.8.1",
    "rich>=14.3.2",
    "trimesh>=4.11.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pybind11-stubgen>=2.5.5",
]

[tool.pyright]
stubPath = ".typings/"
